--- a/website/index.html
+++ b/website/index.html
@@ -8,20 +8,19 @@
 </head>
  <body>
     <div id = "app">
-      <div class ="holder headline">
+      <div class ="holder_headline">
         Weather Journal App
       </div>
-      <div class ="holder zip">
+      <div class ="holder_zip">
         <label for="zip">Enter Zipcode here</label>
         <input type="text" id="zip" placeholder="enter zip code here">
       </div>
-      <div class ="holder feel">
-      <label for="feelings">How are you feeling today?</label>
-//create an input tag
-      <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
+      <div class ="holder_feel">
+        <label for="feelings">How are you feeling today?</label>
+        <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
       <button id="generate" type = "submit"> Generate </button>
       </div>
-      <div class ="holder entry">
+      <div class ="holder_entry">
         <div class = "title">Most Recent Entry</div>
         <div id = "entryHolder">
           <div id = "date"></div> 
